--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@ layout: default
     {% endfor %}
   </ul>
 
+  <h1 class="page-heading">News</h1>
+    <h2>Reviewer for IEEE Transactions on Mobile Computing. 2016.02.25</h2>
+  </ul>
+
   <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
 
 </div>
