--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@ layout: default
   </ul>
 
   <h1 class="page-heading">News</h1>
-    <h2>Reviewer for IEEE Transactions on Mobile Computing. 2016.02.25</h2>
+    <ul>
+      <li>Reviewer for IEEE Transactions on Mobile Computing. 2016.02.25</li>
+    </ul>
   </ul>
 
   <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
